Fixed breadcrumb spacing in aboutme.css

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -9,7 +9,7 @@ p {
 }
 
 .navigation li+li::before {
-  content: " > ";
+  content: " /";
   color: #444444;
 }
 
